--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="quotes_string">Hello there babes my name is TextView and i am used to write quotes</string>
+    <string name="change_quote">Change Quote</string>
+    <string name="change_fontstyle">Change FontStyle</string>
+    <string name="change_image">Change Image</string>
 </resources>
