--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="change_quote">Change Quote</string>
     <string name="change_fontstyle">Change FontStyle</string>
     <string name="change_image">Change Image</string>
+    <string name="done">Done</string>
 </resources>
