added the functionality to change image props programmatically

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="enter_your_quote">Enter Your Quote</string>
     <string name="enter_the_author_of_quote">Enter the Author of Quote</string>
     <string name="create_quote_banner">Create Quote Banner</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="quotes_string">Hello there babes my name is TextView and i am used to write quotes</string>
+    <string name="default_quotes_author">Your Cute Name</string>
     <string name="change_quote">Change Quote</string>
     <string name="change_fontstyle">Change FontStyle</string>
     <string name="change_image">Change Image</string>
