Image Highlighting for sending made

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="change_fontstyle">Change FontStyle</string>
     <string name="change_image">Change Image</string>
     <string name="done">Done</string>
+    <string name="selected">SELECTED</string>
 </resources>
